--- a/document_entity_mapping.json
+++ b/document_entity_mapping.json
@@ -2,11 +2,11 @@
     "classes": {
     },
 	"properties": {
-		"document:abstract": "EJERICO:abstract",
-		"document:catalog": "EJERICO:catalog",
-		"document:citation": "EJERICO:citation",
-		"document:contributor": "EJERICO:contributor",
-		"document:type": "EJERICO:kind"	
+		"abstract": "EJERICO:abstract",
+		"catalog": "EJERICO:catalog",
+		"citation": "EJERICO:citation",
+		"contributor": "EJERICO:contributor",
+		"type": "EJERICO:kind"	
 	},
 	"alias": {
 	}
