--- a/relation_entity_mapping.json
+++ b/relation_entity_mapping.json
@@ -2,26 +2,26 @@
 	"classes": {
 	},
 	"properties": {
-		"relation:has_part":"DCT:hasPart", 
-        "relation:is_part_of":"DCT:isPartOf", 
-        "relation:conform_to":"DCT:conformsTo", 
-        "relation:is_format_of":"DCT:isFormatOf", 
-        "relation:has_format":"DCT:hasFormat", 
-        "relation:is_version_of":"DCT:isVersionOf", 
-        "relation:hash_version":"DCT:hasVersion", 
-        "relation:replaces":"DCT:replaces", 
-        "relation:is_replaces_by":"DCT:isReplacedBy", 
-        "relation:references":"DCT:references", 
-        "relation:is_reference_by":"DCT:isReferencedBy", 
-        "relation:require":"DCT:requires", 
-        "relation:is_required_by":"DCT:isRequiredBy",
-        "relation:was_derived_from":"PROV:wasDerivedFrom", 
-        "relation:was_influenced_by":"PROV:wasInfluencedBy", 
-        "relation:was_quoted_from":"PROV:wasQuotedFrom", 
-        "relation:was_revision_of":"PROV:wasRevisionOf", 
-        "relation:had_primary_source":"PROV:hadPrimarySource", 
-        "relation:alternate_of":"PROV:alternateOf", 
-		"relation:specialization_of":"PROV:specializationOf"
+		"has_part":"DCT:hasPart", 
+        "is_part_of":"DCT:isPartOf", 
+        "conform_to":"DCT:conformsTo", 
+        "is_format_of":"DCT:isFormatOf", 
+        "has_format":"DCT:hasFormat", 
+        "is_version_of":"DCT:isVersionOf", 
+        "has_version":"DCT:hasVersion", 
+        "replaces":"DCT:replaces", 
+        "is_replaces_by":"DCT:isReplacedBy", 
+        "references":"DCT:references", 
+        "is_reference_by":"DCT:isReferencedBy", 
+        "require":"DCT:requires", 
+        "is_required_by":"DCT:isRequiredBy",
+        "was_derived_from":"PROV:wasDerivedFrom", 
+        "was_influenced_by":"PROV:wasInfluencedBy", 
+        "was_quoted_from":"PROV:wasQuotedFrom", 
+        "was_revision_of":"PROV:wasRevisionOf", 
+        "had_primary_source":"PROV:hadPrimarySource", 
+        "alternate_of":"PROV:alternateOf", 
+	"specialization_of":"PROV:specializationOf"
 	},
 	"alias": {
 	}
