--- a/software_entity_mapping.json
+++ b/software_entity_mapping.json
@@ -1,16 +1,16 @@
 {
 	"classes": {},
 	"properties": {
-		"software:distribution": "DCAT:distribution",
-		"software:memory_requirements": "SCHEMA:memoryRequirements",
-		"software:operating_system": "SCHEMA:operatingSystem",
-		"software:processor_requirements": "SCHEMA:processorRequirements",
-		"software:programming_language": "SCHEMA:programmingLanguage",
-		"software:runtime": "SCHEMA:runtimePlatform",
-		"software:storage_requirements": "SCHEMA:storageRequirements",
-		"software:suite": "SCHEMA:applicationSuite",
-		"software:source": "SCHEMA:codeRepository",
-		"software:version": "SCHEMA:softwareVersion"
+		"distribution": "DCAT:distribution",
+		"memory_requirements": "SCHEMA:memoryRequirements",
+		"operating_system": "SCHEMA:operatingSystem",
+		"processor_requirements": "SCHEMA:processorRequirements",
+		"programming_language": "SCHEMA:programmingLanguage",
+		"runtime": "SCHEMA:runtimePlatform",
+		"storage_requirements": "SCHEMA:storageRequirements",
+		"suite": "SCHEMA:applicationSuite",
+		"source": "SCHEMA:codeRepository",
+		"version": "SCHEMA:softwareVersion"
 	},
 	"alias": {}
 }
