--- a/variable_entity_mapping.json
+++ b/variable_entity_mapping.json
@@ -2,16 +2,16 @@
 	"classes": {
 	},
 	"properties": {
-		"variable:alternate_name": "SCHEMA:alternateName",
-        "variable:max_value": "SCHEMA:maxValue",
-		"variable:measurement_technique": "SCHEMA:measurentTechnique",
-		"variable:min_value": "SCHEMA:minValue",
-		"variable:name": "SCHEMA:name",
-        "variable:propertyid": "SCHEMA:propertyID",
-        "variable:unit_code": "SCHEMA:unitCode",
-        "variable:unit_text": "SCHEMA:unitText",
-        "variable:value": "SCHEMA:value",
-		"variable:value_reference": "SCHEMA:valueReference"
+		"alternate_name": "SCHEMA:alternateName",
+        "max_value": "SCHEMA:maxValue",
+		"measurement_technique": "SCHEMA:measurentTechnique",
+		"min_value": "SCHEMA:minValue",
+		"name": "SCHEMA:name",
+        "propertyid": "SCHEMA:propertyID",
+        "unit_code": "SCHEMA:unitCode",
+        "unit_text": "SCHEMA:unitText",
+        "value": "SCHEMA:value",
+		"value_reference": "SCHEMA:valueReference"
 	},
 	"alias": {
 	}
