--- a/epos/default_entity_mapping.json
+++ b/epos/default_entity_mapping.json
@@ -1,14 +1,18 @@
 {
 	"classes": {
+		"api": "HYDRA:APIDocumentation",
+		"apioperation": "HYDRA:Operation",
 		"address": "LOCN:Address",
 		"catalog": "DCAT:Catalog",
 		"concept": "SKOS:Concept",
 		"conceptscheme": "SKOS:ConceptScheme",
+		"contactpoint": "SCHEMA:ContactPoint",
 		"dataset": "DCAT:Dataset",
 		"datasetvariable": "BODC:A05",
 		"distribution": "DCAT:Distribution",
 		"document": "SCHEMA:digitalDocument",
 		"equipment":"EJERICO:Equipment",
+		"facility": "EJERICO:Facility",
 		"organization": "FOAF:Organization",
 		"platform": "SOSA:Platform",
 		"project": "FOAF:Project",
@@ -18,20 +22,26 @@
 		"sensor": "SOSA:Sensor",
 		"service": "SCHEMA:Service",
 		"software": "SCHEMA:SoftwareApplication",
+		"softwaresource": "SCHEMA:SoftwareSource",
 		"temporal": "DCT:PeriodOfTime",
 		"vcard": "VCARD:Address",
-		"variable": "SCHEMA:PropertyValue"
+		"variable": "SCHEMA:PropertyValue",
+		"webservice": "EJERICO:WebService"
 	},
 	"properties": {
+		"api": "EJERICO:hasApi",
+		"apioperation": "EJERICO:hasApiOperation",
 		"address": "EJERICO:hasAddress",
 		"catalog": "EJERICO:hasCatalog",
 		"concept": "DCT:subject",
-		"conceptscheme": "EJERICO:hasConceptSchema",
+		"conceptscheme": "EJERICO:hasConceptScheme",
+		"contactpoint": "EJERICO:hasContactPoint",
 		"dataset": "EJERICO:hasDataset",
 		"datasetvariable": "EJERICO:hasDatasetVariable",
 		"distribution": "SCHEMA:distribution",
 		"document": "EJERICO:hasDocument",
 		"equipment":"EJERICO:hasEquipment",
+		"facility":"EJERICO:hasFacility",
 		"organization": "EJERICO:hasOrganization",
 		"platform": "EJERICO:hasPlatform",
 		"project": "EJERICO:hasProject",
@@ -41,15 +51,16 @@
 		"sensor": "EJERICO:hasSensor",
 		"service": "EJERICO:hasService",
 		"software": "PROV:wasDerivedFrom",
+		"softwaresource": "EJERICO:hasSoftwareSource-",
 		"temporal": "DCT:temporal",
 		"variable": "EJERICO:hasVariable",
 		"vcard": "EJERICO:hasVcard",
+		"webservice": "EJERICO:hasWebService",
 		
 		"abstract": "EJERICO:abstract",
 		"accessmode": "SCHEMA:accessMode",
 		"accessurl": "DCAT:accessURL",
 		"alias": "ADMS:identifier",
-		"api": "ADMS:identifier",
 		"author": "SCHEMA:author",
 		"citation": "EJERICO:citation",
 		"comment": "SCHEMA:comment",
