--- a/ejerico/default_entity_mapping.json
+++ b/ejerico/default_entity_mapping.json
@@ -68,37 +68,57 @@
 		"creator": "DCT:creator",
 		"contact": "SCHEMA:contactPoint",
 		"contributor": "DCT:contributor",
+		"default_value": "SCHEMA:defaultValue",
 		"description": "DCT:description",
 		"DOI": "EJERICO:DOI",
 		"downloadurl": "DCAT:downloadURL",
 		"editor": "SCHEMA:editor",
+		"end_date": "SCHEMA:endDate",
 		"equipmenttype": "EJERICO:equipmentType",
 		"email": "SCHEMA:email",
+		"familtyName": "SCHEMA:familyName",
+		"filter": "EJERICO:filter",
 		"format": "SCHEMA:format",
+		"givenName": "SCHEMA:givenName",
 		"id": "DCT:identifier",
 		"is_jerico": "EJERICO:isJerico",
+		"issn": "SCHEMA:issn",
 		"keywords": "SCHEMA:keywords",
 		"knows": "FOAF:knows",
+		"label": "RDFS:label",
 		"language": "DCT:language",
 		"license": "DCT:license",
 		"manufacturer": "SCHEMA:manufacturer",
+		"max_value": "SCHEMA:maxValue",
 		"mimetype": "SCHEMA:fileFormat",
+		"min_value": "SCHEMA:minValue",
 		"model": "SCHEMA:model",
 		"modified": "DCT:modified",
 		"name": "SCHEMA:name",
+		"nationality": "SCHEMA:nationality",
 		"owner": "PROV:wasAttributedTo",
+		"orientation": "EJERICO:orientation",
+		"page": "FOAF:page",
 		"pages": "SCHEMA:numberOfPage",
 		"parent": "SCHEMA:memberOf",
+		"period": "EJERICO:samplePeriod",
+		"phone": "SCHEMA:telephone",
 		"processing_level": "EJERICO:processingLevel",
+		"provenance": "DCT:provenanceStatement",
 		"provider": "SCHEMA:provider",
 		"publisher": "DCT:publisher",
 		"published": "DCT:issued",
+		"qualification": "SCHEMA:qualifications",
+		"range": "EJERICO:range",
+		"resolution": "EJERICO:resolution",
 		"responsible": "PROV:wasAssociatedWith",
+		"serial": "SCHEMA:serialNumber",
 		"size": "SCHEMA:size",
+		"start_date": "SCHEMA:startDate",
 		"rigths": "DCT:rights",
 		"theme": "DCAT:themeTaxonomy",
 		"title": "DCT:title",
-		"type": "SCHEMA:additionalType",	
+		"type": "DCT:type",	
 		"updated": "DCT:modified",
 		"url": "SCHEMA:url"
 	},
