--- a/epos/organization_entity_mapping.json
+++ b/epos/organization_entity_mapping.json
@@ -2,6 +2,7 @@
     "classes": {
     },
 	"properties": {
+        "lei_code": "SCHEMA:leiCode",
         "servicetype": "SCHEMA:serviceType",
         "termsofservice": "SCHEMA:termsOfService",
         "software": "DCT:requires",
