--- a/socib/spatial_entity_mapping.json
+++ b/socib/spatial_entity_mapping.json
@@ -6,12 +6,12 @@
 		"geometry": "LOCN:geometry",
 		"name": "LOCN:geographicName",
 		"address": "LOCN:Address",
-		"max_latitude": "EJERICO:maxLatitude",
-        "max_longitude": "EJERICO:maxLongitude",
-        "min_latitude": "EJERICO:minLatitude",
-        "min_longitude": "EJERICO:maxLongitude",
-        "unit_latitude": "EJERICO:unitLatitude",
-        "unit_longitude": "EJERICO:unitLongitude"
+		"max_latitude": "EPOS:maxLatitude",
+        "max_longitude": "EPOS:maxLongitude",
+        "min_latitude": "EPOS:minLatitude",
+        "min_longitude": "EPOS:maxLongitude",
+        "unit_latitude": "EPOS:unitLatitude",
+        "unit_longitude": "EPOS:unitLongitude"
 	},
 	"alias": {
 	}
