--- a/socib/document_entity_mapping.json
+++ b/socib/document_entity_mapping.json
@@ -2,11 +2,11 @@
     "classes": {
     },
 	"properties": {
-		"abstract": "EPOS:abstract",
-		"catalog": "EPOS:catalog",
-		"citation": "EPOS:citation",
-		"contributor": "EPOS:contributor",
-		"type": "EPOS:kind",
+		"abstract": "SOCIB:abstract",
+		"catalog": "SOCIB:catalog",
+		"citation": "SOCIB:citation",
+		"contributor": "SOCIB:contributor",
+		"type": "SOCIB:kind",
 		"volume": "SCHEMA:volumeNumber"	
 	},
 	"alias": {
