--- a/socib/default_entity_mapping.json
+++ b/socib/default_entity_mapping.json
@@ -11,8 +11,8 @@
 		"datasetvariable": "BODC:A05",
 		"distribution": "DCAT:Distribution",
 		"document": "SCHEMA:digitalDocument",
-		"equipment":"EPOS:Equipment",
-		"facility": "EPOS:Facility",
+		"equipment":"SOCIB:Equipment",
+		"facility": "SOCIB:Facility",
 		"organization": "FOAF:Organization",
 		"platform": "SOSA:Platform",
 		"project": "FOAF:Project",
@@ -26,43 +26,43 @@
 		"temporal": "DCT:PeriodOfTime",
 		"vcard": "VCARD:Address",
 		"variable": "SCHEMA:PropertyValue",
-		"webservice": "EPOS:WebService"
+		"webservice": "SOCIB:WebService"
 	},
 	"properties": {
-		"api": "EPOS:hasApi",
-		"apioperation": "EPOS:hasApiOperation",
-		"address": "EPOS:hasAddress",
-		"catalog": "EPOS:hasCatalog",
+		"api": "SOCIB:hasApi",
+		"apioperation": "SOCIB:hasApiOperation",
+		"address": "SOCIB:hasAddress",
+		"catalog": "SOCIB:hasCatalog",
 		"concept": "DCT:subject",
-		"conceptscheme": "EPOS:hasConceptScheme",
-		"contactpoint": "EPOS:hasContactPoint",
-		"dataset": "EPOS:hasDataset",
-		"datasetvariable": "EPOS:hasDatasetVariable",
+		"conceptscheme": "SOCIB:hasConceptScheme",
+		"contactpoint": "SOCIB:hasContactPoint",
+		"dataset": "SOCIB:hasDataset",
+		"datasetvariable": "SOCIB:hasDatasetVariable",
 		"distribution": "SCHEMA:distribution",
-		"document": "EPOS:hasDocument",
-		"equipment":"EPOS:hasEquipment",
-		"facility":"EPOS:hasFacility",
-		"organization": "EPOS:hasOrganization",
-		"platform": "EPOS:hasPlatform",
-		"project": "EPOS:hasProject",
-		"person": "EPOS:hasPerson",
+		"document": "SOCIB:hasDocument",
+		"equipment":"SOCIB:hasEquipment",
+		"facility":"SOCIB:hasFacility",
+		"organization": "SOCIB:hasOrganization",
+		"platform": "SOCIB:hasPlatform",
+		"project": "SOCIB:hasProject",
+		"person": "SOCIB:hasPerson",
 		"relation": "DCT:relation",
 		"spatial": "DCT:spatial",
-		"sensor": "EPOS:hasSensor",
-		"service": "EPOS:hasService",
+		"sensor": "SOCIB:hasSensor",
+		"service": "SOCIB:hasService",
 		"software": "PROV:wasDerivedFrom",
-		"softwaresource": "EPOS:hasSoftwareSource",
+		"softwaresource": "SOCIB:hasSoftwareSource",
 		"temporal": "DCT:temporal",
-		"variable": "EPOS:hasVariable",
-		"vcard": "EPOS:hasVcard",
-		"webservice": "EPOS:hasWebService",
+		"variable": "SOCIB:hasVariable",
+		"vcard": "SOCIB:hasVcard",
+		"webservice": "SOCIB:hasWebService",
 		
-		"abstract": "EPOS:abstract",
+		"abstract": "SOCIB:abstract",
 		"accessmode": "SCHEMA:accessMode",
 		"accessurl": "DCAT:accessURL",
 		"alias": "ADMS:identifier",
 		"author": "SCHEMA:author",
-		"citation": "EPOS:citation",
+		"citation": "SOCIB:citation",
 		"comment": "SCHEMA:comment",
 		"created": "DCT:created",
 		"creator": "DCT:creator",
@@ -70,18 +70,18 @@
 		"contributor": "DCT:contributor",
 		"default_value": "SCHEMA:defaultValue",
 		"description": "DCT:description",
-		"DOI": "EPOS:DOI",
+		"DOI": "SOCIB:DOI",
 		"downloadurl": "DCAT:downloadURL",
 		"editor": "SCHEMA:editor",
 		"end_date": "SCHEMA:endDate",
-		"equipmenttype": "EPOS:equipmentType",
+		"equipmenttype": "SOCIB:equipmentType",
 		"email": "SCHEMA:email",
 		"familtyName": "SCHEMA:familyName",
-		"filter": "EPOS:filter",
+		"filter": "SOCIB:filter",
 		"format": "SCHEMA:format",
 		"givenName": "SCHEMA:givenName",
 		"id": "DCT:identifier",
-		"is_jerico": "EPOS:isJerico",
+		"is_jerico": "SOCIB:isJerico",
 		"issn": "SCHEMA:issn",
 		"keywords": "SCHEMA:keywords",
 		"knows": "FOAF:knows",
@@ -97,20 +97,20 @@
 		"name": "SCHEMA:name",
 		"nationality": "SCHEMA:nationality",
 		"owner": "PROV:wasAttributedTo",
-		"orientation": "EPOS:orientation",
+		"orientation": "SOCIB:orientation",
 		"page": "FOAF:page",
 		"pages": "SCHEMA:numberOfPage",
 		"parent": "SCHEMA:memberOf",
-		"period": "EPOS:samplePeriod",
+		"period": "SOCIB:samplePeriod",
 		"phone": "SCHEMA:telephone",
-		"processing_level": "EPOS:processingLevel",
+		"processing_level": "SOCIB:processingLevel",
 		"provenance": "DCT:provenanceStatement",
 		"provider": "SCHEMA:provider",
 		"publisher": "DCT:publisher",
 		"published": "DCT:issued",
 		"qualification": "SCHEMA:qualifications",
-		"range": "EPOS:range",
-		"resolution": "EPOS:resolution",
+		"range": "SOCIB:range",
+		"resolution": "SOCIB:resolution",
 		"responsible": "PROV:wasAssociatedWith",
 		"serial": "SCHEMA:serialNumber",
 		"size": "SCHEMA:size",
