--- a/epos/default_entity_mapping.json
+++ b/epos/default_entity_mapping.json
@@ -121,7 +121,8 @@
 		"title": "DCT:title",
 		"type": "DCT:type",	
 		"updated": "DCT:modified",
-		"url": "SCHEMA:url"
+		"url": "SCHEMA:url",
+		"version": "DCT:hasVersion"
 	},
 	"alias": {
 		"identifier": "id",
