--- a/epos/default_entity_mapping.json
+++ b/epos/default_entity_mapping.json
@@ -64,10 +64,11 @@
 		"author": "SCHEMA:author",
 		"citation": "EPOS:citation",
 		"comment": "SCHEMA:comment",
-		"created": "DCT:created",
-		"creator": "DCT:creator",
+		"conformsTo": "DCT:conformsTo",
 		"contact": "SCHEMA:contactPoint",
 		"contributor": "DCT:contributor",
+		"created": "DCT:created",
+		"creator": "DCT:creator",
 		"default_value": "SCHEMA:defaultValue",
 		"description": "DCT:description",
 		"DOI": "EPOS:DOI",
