--- a/epos/default_entity_mapping.json
+++ b/epos/default_entity_mapping.json
@@ -13,7 +13,7 @@
 		"document": "SCHEMA:digitalDocument",
 		"equipment":"EPOS:Equipment",
 		"facility": "EPOS:Facility",
-		"organization": "FOAF:Organization",
+		"organization": "SCHEMA:Organization",
 		"platform": "SOSA:Platform",
 		"project": "FOAF:Project",
 		"person": "FOAF:Person",
@@ -60,7 +60,7 @@
 		"abstract": "EPOS:abstract",
 		"accessmode": "SCHEMA:accessMode",
 		"accessurl": "DCAT:accessURL",
-		"alias": "ADMS:identifier",
+		"alias": "SCHEMA:identifier",
 		"author": "SCHEMA:author",
 		"citation": "EPOS:citation",
 		"comment": "SCHEMA:comment",
