--- a/epos/organization_entity_mapping.json
+++ b/epos/organization_entity_mapping.json
@@ -6,7 +6,9 @@
         "servicetype": "SCHEMA:serviceType",
         "termsofservice": "SCHEMA:termsOfService",
         "software": "DCT:requires",
-        "project": "PROV:wasGeneratedBy"
+        "project": "PROV:wasGeneratedBy",
+        "name": "SCHEMA:legalName",
+        "url": "SCHEMA:logo"
 	},
 	"alias": {
 	}
