--- a/ejerico/default_entity_mapping.json
+++ b/ejerico/default_entity_mapping.json
@@ -77,7 +77,8 @@
 		"end_date": "SCHEMA:endDate",
 		"equipmenttype": "EJERICO:equipmentType",
 		"email": "SCHEMA:email",
-		"familtyName": "SCHEMA:familyName",
+		"familyName": "SCHEMA:familyName",
+		"fax": "SCHEMA:faxNumber",
 		"filter": "EJERICO:filter",
 		"format": "SCHEMA:format",
 		"givenName": "SCHEMA:givenName",
