--- a/ejerico/spatial_entity_mapping.json
+++ b/ejerico/spatial_entity_mapping.json
@@ -6,8 +6,8 @@
 		"geometry": "LOCN:geometry",
 		"name": "LOCN:geographicName",
 		"address": "LOCN:Address",
-		"latitude": "SCHEMA:latitude",
-		"longitude": "SCHEMA:longitude",
+		"latitude": "EJERICO:Latitude",
+		"longitude": "EJERICO:longitude",
 		"max_latitude": "EJERICO:maxLatitude",
         "max_longitude": "EJERICO:maxLongitude",
         "min_latitude": "EJERICO:minLatitude",
