--- a/ejerico/address_entity_mapping.json
+++ b/ejerico/address_entity_mapping.json
@@ -2,10 +2,11 @@
     "classes": {
     },
 	"properties": {
-        "servicetype": "SCHEMA:serviceType",
-        "termsofservice": "SCHEMA:termsOfService",
-        "software": "DCT:requires",
-        "project": "PROV:wasGeneratedBy"
+        "street_address": "SCHEMA:streetAddress",
+        "locality": "SCHEMA:addressLocality",
+        "postal_code": "SCHEMA:postalCode",
+        "country": "SCHEMA:addressCountry",
+        "region": "SCHEMA:regionAddress"
 	},
 	"alias": {
 	}
