--- a/socib/default_entity_mapping.json
+++ b/socib/default_entity_mapping.json
@@ -77,7 +77,7 @@
 		"end_date": "SCHEMA:endDate",
 		"equipmenttype": "SOCIB:equipmentType",
 		"email": "SCHEMA:email",
-		"familtyName": "SCHEMA:familyName",
+		"familyname": "SCHEMA:familyName",
 		"filter": "SOCIB:filter",
 		"format": "SCHEMA:format",
 		"givenName": "SCHEMA:givenName",
