--- a/socib/default_entity_mapping.json
+++ b/socib/default_entity_mapping.json
@@ -77,7 +77,8 @@
 		"end_date": "SCHEMA:endDate",
 		"equipmenttype": "SOCIB:equipmentType",
 		"email": "SCHEMA:email",
-		"familyname": "SCHEMA:familyName",
+		"familyName": "SCHEMA:familyName",
+		"fax": "SCHEMA:faxNumber",
 		"filter": "SOCIB:filter",
 		"format": "SCHEMA:format",
 		"givenName": "SCHEMA:givenName",
@@ -85,6 +86,7 @@
 		"is_jerico": "SOCIB:isJerico",
 		"issn": "SCHEMA:issn",
 		"issued": "DCT:issued",
+		"harverted_source": "SOCIB:source",
 		"keywords": "SCHEMA:keywords",
 		"knows": "FOAF:knows",
 		"label": "RDFS:label",
@@ -117,7 +119,6 @@
 		"serial": "SCHEMA:serialNumber",
 		"size": "SCHEMA:size",
 		"start_date": "SCHEMA:startDate",
-		"source": "SOCIB:source",
 		"rigths": "DCT:rights",
 		"theme": "DCAT:themeTaxonomy",
 		"title": "DCT:title",
