--- a/socib/spatial_entity_mapping.json
+++ b/socib/spatial_entity_mapping.json
@@ -11,7 +11,8 @@
 		"max_latitude": "SOCIB:maxLatitude",
         "max_longitude": "SOCIB:maxLongitude",
         "min_latitude": "SOCIB:minLatitude",
-        "min_longitude": "SOCIB:maxLongitude",
+        "min_longitude": "SOCIB:minLongitude",
+		"reference_system": "LOCN:csr",
         "unit_latitude": "SOCIB:unitLatitude",
         "unit_longitude": "SOCIB:unitLongitude"
 	},
