--- a/ejerico/default_entity_mapping.json
+++ b/ejerico/default_entity_mapping.json
@@ -44,6 +44,7 @@
 		"facility":"EJERICO:hasFacility",
 		"organization": "EJERICO:hasOrganization",
 		"platform": "EJERICO:hasPlatform",
+		"program": "SCHEMA:memmberOf",
 		"project": "EJERICO:hasProject",
 		"person": "EJERICO:hasPerson",
 		"relation": "DCT:relation",
@@ -83,7 +84,6 @@
 		"format": "SCHEMA:format",
 		"givenName": "SCHEMA:givenName",
 		"id": "DCT:identifier",
-		"is_jerico": "EJERICO:isJerico",
 		"issn": "SCHEMA:issn",
 		"issued": "DCT:issued",
 		"harverted_source": "EJERICO:source",
@@ -104,7 +104,7 @@
 		"orientation": "EJERICO:orientation",
 		"page": "FOAF:page",
 		"pages": "SCHEMA:numberOfPage",
-		"parent": "SCHEMA:memberOf",
+		"parent": "EJERICO:memberOf",
 		"period": "EJERICO:samplePeriod",
 		"phone": "SCHEMA:telephone",
 		"processing_level": "EJERICO:processingLevel",
