--- a/socib/default_entity_mapping.json
+++ b/socib/default_entity_mapping.json
@@ -44,6 +44,7 @@
 		"facility":"SOCIB:hasFacility",
 		"organization": "SOCIB:hasOrganization",
 		"platform": "SOCIB:hasPlatform",
+		"program": "SCHEMA:memberOf",
 		"project": "SOCIB:hasProject",
 		"person": "SOCIB:hasPerson",
 		"relation": "DCT:relation",
@@ -83,7 +84,6 @@
 		"format": "SCHEMA:format",
 		"givenName": "SCHEMA:givenName",
 		"id": "DCT:identifier",
-		"is_jerico": "SOCIB:isJerico",
 		"issn": "SCHEMA:issn",
 		"issued": "DCT:issued",
 		"harverted_source": "SOCIB:source",
@@ -104,7 +104,7 @@
 		"orientation": "SOCIB:orientation",
 		"page": "FOAF:page",
 		"pages": "SCHEMA:numberOfPage",
-		"parent": "SCHEMA:memberOf",
+		"parent": "SOCIB:memberOf",
 		"period": "SOCIB:samplePeriod",
 		"phone": "SCHEMA:telephone",
 		"processing_level": "SOCIB:processingLevel",
