--- a/epos/default_entity_mapping.json
+++ b/epos/default_entity_mapping.json
@@ -45,6 +45,7 @@
 		"facility":"EPOS:hasFacility",
 		"organization": "EPOS:hasOrganization",
 		"platform": "EPOS:hasPlatform",
+		"program": "SCHEMA:memberOf",
 		"project": "EPOS:hasProject",
 		"person": "EPOS:hasPerson",
 		"relation": "DCT:relation",
@@ -82,7 +83,6 @@
 		"format": "SCHEMA:format",
 		"givenName": "SCHEMA:givenName",
 		"id": "DCT:identifier",
-		"is_jerico": "EPOS:isJerico",
 		"issn": "SCHEMA:issn",
 		"issued": "DCT:issued",
 		"keywords": "SCHEMA:keywords",
@@ -102,7 +102,7 @@
 		"orientation": "EPOS:orientation",
 		"page": "FOAF:page",
 		"pages": "SCHEMA:numberOfPage",
-		"parent": "SCHEMA:memberOf",
+		"parent": "EPOS:memberOf",
 		"period": "EPOS:samplePeriod",
 		"phone": "SCHEMA:telephone",
 		"processing_level": "EPOS:processingLevel",
