--- a/socib/person_entity_mapping.json
+++ b/socib/person_entity_mapping.json
@@ -2,6 +2,7 @@
     "classes": {
     },
 	"properties": {
+        "affiliation": "SCHEMA:affiliation",
         "servicetype": "SCHEMA:serviceType",
         "termsofservice": "SCHEMA:termsOfService",
         "software": "DCT:requires",
