--- a/ejerico/api_entity_mapping.json
+++ b/ejerico/api_entity_mapping.json
@@ -1,6 +1,9 @@
 {
 	"classes": {},
 	"properties": {
+		"operation": "HYDRA:supportedOperation",
+		"status_code": "HYDRA:HYDRA:statusCode",
+		"url": "HYDRA:entrypoint"
 	},
 	"alias": {}
 }
