--- a/ejerico/default_entity_mapping.json
+++ b/ejerico/default_entity_mapping.json
@@ -122,6 +122,7 @@
 		"size": "SCHEMA:size",
 		"start_date": "SCHEMA:startDate",
 		"rigths": "DCT:rights",
+		"text": "SCHEMA:text",
 		"theme": "DCAT:themeTaxonomy",
 		"title": "DCT:title",
 		"type": "DCT:type",	
